--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 /* Home page */
 #hero {
-    background-image: url("swallow.jpg");
+    background-image: url("https://www.freepik.com/free-photo/side-view-pilaf-with-stewed-beef-meat-plate_8196815.htm#fromView=search&page=1&position=0&uuid=8e01ca0b-265e-4fc4-b286-2daad41e3111");
     height: 65vh;
     width: 100%;
     background-size: cover;
